Corrigi o menu icon que estava torto.
Sim, apenas isso.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="navbar">
-            <h1 id="p-logo">Plácido <span>Gabriel</span></h1>
+            <h1 id="p-logo">Plácido <span id="spanbar">Gabriel</span></h1>
             <nav id="side-bar">
                 <ul id="side-ul">
                     <li><i class='bx bx-x' style="font-size: 36px;" onclick="xPressed()"></i></li>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <nav id="original-nav">
-                <ul>
+                <ul id="original-ul">
                     <li><a href="#home" class="h-link">Home</a></li>
                     <li><a href="#sobre" class="h-link">Sobre</a></li>
                     <li><a href="#projectos" class="h-link">Projectos</a></li>
