Alterei o og:image
Segundo o chat o og:image tem de incluir https

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta property="og:title" content="Portifólio | Plácido Gabriel">
     <meta property="og:description" content="Portifólio de Plácido Gabriel">
     <meta property="og:url" content="www.placido-gabriel.github.io/Portifolio">
-    <meta property="og:image" content="assets/images/git-eu.png">
     <title>Portifólio | Plácido Gabriel</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
@@ -14,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <meta property="og:image" content="https://www.placido-gabriel.github.io/Portifolio/assets/images/git-eu.png">
 </head>
 <body>
     <header>
