Adicionei estrutura de cards.
Alterei algumas coisas, e adicionei a estrutura dos card que ainda faltam ser responsivos.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
         </section>
         <section id="projectos">
             <h2>Projectos</h2>
-
+            <div id="card-mae">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div id="card-mae-irma">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card ultimo">
+                    <p id=""><a>Veja Mais </a></p>
+                </div>
+            </div>
         </section>
           <section id="skills">
             <h2 id>Skills</h2>
